# nshaderc

./: .gitmodules  CMakeLists.txt  README.md
config/: init-mac.sh  init-win.bat
examples/: CMakeLists.txt  shaderlib.glsl
examples/01-cubes/: cubes.fs  cubes.vs
examples/02-metaballs/: metaballs.fs  metaballs.vs
examples/03-raymarch/: raymarch.fs  raymarch.vs
examples/04-mesh/: mesh.fs  mesh.vs
examples/05-instancing/: instancing.fs  instancing.vs
examples/06-bump/: bump.fs  bump.vs  bump_instanced.vs
examples/07-callback/: callback.fs  callback.vs
examples/08-update/: update.fs  update.glsl  update.vs  update_3d.fs  update_cmp.fs
examples/09-hdr/: common.glsl  hdr_blur.fs  hdr_blur.vs  hdr_bright.fs  hdr_bright.vs  hdr_lum.fs  hdr_lumavg.fs  hdr_mesh.fs  hdr_mesh.vs  hdr_skybox.fs  hdr_skybox.vs  hdr_tonemap.fs  hdr_tonemap.vs
examples/12-lod/: tree.fs  tree.vs
examples/13-stencil/: stencil_color.vs  stencil_color_black.fs  stencil_color_lighting.fs  stencil_color_lighting.vs  stencil_color_texture.fs  stencil_color_texture.vs  stencil_texture.fs  stencil_texture.vs  stencil_texture_lighting.fs  stencil_texture_lighting.vs
examples/14-shadowvolumes/: shadowvolume_color_lighting.fs  shadowvolume_color_lighting.vs  shadowvolume_color_texture.fs  shadowvolume_color_texture.vs  shadowvolume_svback.vs  shadowvolume_svbackblank.fs  shadowvolume_svbackcolor.fs  shadowvolume_svbacktex1.fs  shadowvolume_svbacktex2.fs  shadowvolume_svfront.vs  shadowvolume_svfrontblank.fs  (+12 more)
src/: MurmurHash.hpp  ShaderWriter.cpp  ShaderWriter.hpp  main.cpp
(+29 files in other folders)
